--- a/PaintTool.vcxproj
+++ b/PaintTool.vcxproj
@@ -162,7 +162,11 @@
     <ResourceCompile Include="PaintTool.rc" />
   </ItemGroup>
   <ItemGroup>
+    <Image Include="..\..\..\..\..\..\brush.ico" />
+    <Image Include="brush.ico" />
     <Image Include="icon1.ico" />
+    <Image Include="icon2.ico" />
+    <Image Include="icon3.ico" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
